@@ -35,6 +35,7 @@
 #include "obstack.h"
 #include "diagnostic-core.h"
 #include "collect-utils.h"
+#include "gomp-constants.h"
 
 const char tool_name[] = "nvptx mkoffload";
 
@@ -791,9 +792,9 @@ process (FILE *in, FILE *out)
   fprintf (out, "extern void GOMP_offload_register (const void *, int, void *);\n");
 
   fprintf (out, "extern void *__OPENMP_TARGET__[];\n\n");
-  fprintf (out, "#define PTX_ID 1\n");
   fprintf (out, "static __attribute__((constructor)) void init (void)\n{\n");
-  fprintf (out, "  GOMP_offload_register (__OPENMP_TARGET__, PTX_ID,\n");
+  fprintf (out, "  GOMP_offload_register (__OPENMP_TARGET__, %d,\n",
+	   GOMP_DEVICE_NVIDIA_PTX);
   fprintf (out, "                         &target_data);\n");
   fprintf (out, "};\n");
 }
